tests/snapshots/s7_network_view__view_empty_snapshots.snap
---
source: tests/s7_network_view.rs
expression: view
---
NetworkView {
    overlay_short: "—",
    ethereum_short: "—",
    overlay_full: "—",
    ethereum_full: "—",
    underlays: [],
    inbound: 0,
    outbound: 0,
    reachability: NotLoaded,
    network_availability: NotLoaded,
}
