tests/snapshots/s7_network_view__view_private_node_behind_nat.snap
---
source: tests/s7_network_view.rs
expression: view
---
NetworkView {
    overlay_short: "cccccc…cccc",
    ethereum_short: "dddddd…dddd",
    overlay_full: "cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc",
    ethereum_full: "0xdddddddddddddddddddddddddddddddddddddddd",
    underlays: [
        UnderlayRow {
            multiaddr: "/ip4/127.0.0.1/tcp/1634/p2p/16Uiu...",
            kind: Private,
        },
        UnderlayRow {
            multiaddr: "/ip4/192.168.1.5/tcp/1634/p2p/16Uiu...",
            kind: Private,
        },
        UnderlayRow {
            multiaddr: "/ip4/10.0.0.5/tcp/1634/p2p/16Uiu...",
            kind: Private,
        },
    ],
    inbound: 0,
    outbound: 4,
    reachability: Private,
    network_availability: Available,
}
