tests/snapshots/s7_network_view__view_unknown_reachability_string_passes_through.snap
---
source: tests/s7_network_view.rs
assertion_line: 169
expression: view
---
NetworkView {
    overlay_short: "111111…1111",
    ethereum_short: "222222…2222",
    underlays: [],
    inbound: 0,
    outbound: 0,
    reachability: Other(
        "Symmetric",
    ),
    network_availability: Unavailable,
}
